--- a/public/stylesheets/css/layout.css
+++ b/public/stylesheets/css/layout.css
@@ -316,10 +316,7 @@ input:-webkit-autofill {
     margin: 0;
     border-radius: 0;
     background-image: url("/images/hero-bg--small.jpg");
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: 25% 0%;
-    background-size: cover;
+    background-attachment: initial;
   }
 }
 
