--- a/public/stylesheets/scss/layout.scss
+++ b/public/stylesheets/scss/layout.scss
@@ -493,10 +493,7 @@
 		margin: 0;
 		border-radius: 0;
 		background-image: url('/images/hero-bg--small.jpg');
-			background-repeat: no-repeat;
-			background-attachment: fixed;
-			background-position: 25% 0%;
-			background-size: cover;
+			background-attachment: initial;
 	}
 }
 
