Added rel=noopener to external links

--- a/functions/views/index.hbs
+++ b/functions/views/index.hbs
@@ -60,7 +60,7 @@
 					data-src="/images/about@3x.png"
 					src="/images/about@3x.png" alt="A Bit About Me" class="card-art lazyload">
 				<h3 class="card-title">A Bit About Me</h2>
-				<p class="card-copy">Hey there, my name is <a href="https://www.linkedin.com/in/tyler-richardson-775228a0/" target="_blank">Tyler</a> and thank you for your interest in my work. I am a Product Designer living in the San Francisco Bay Area that’s worked at a startup named <a href="https://quotedcar.com" target="_blank">QuotedCar</a> for the past four years.</p>
+				<p class="card-copy">Hey there, my name is <a href="https://www.linkedin.com/in/tyler-richardson-775228a0/" rel="noopener">Tyler</a> and thank you for your interest in my work. I am a Product Designer living in the San Francisco Bay Area that’s worked at a startup named <a href="https://quotedcar.com" rel="noopener">QuotedCar</a> for the past four years.</p>
 				<p class="card-copy">I thrive in a world where I can put my creative problem solving skills to work everyday. I lean hard on my experience in UX Design, UI Design, and Front-End Development to create solutions to complex interaction
 					design problems, and to create experiences that are simple and delightful for users.</p>
 				<p class="card-copy">While I love bridging the gap between people and machines, I’ve also gained experience over the past two years in agile project management. In fact, I’ve been leading a small product team utilizing a SCRUM framework to manage our projects.</p>
@@ -151,28 +151,28 @@
 				<h3 class="card-title">My Portfolio</h2>
 				<p class="card-copy">Through these links you can learn more about me, and my creative work. Please email me through the request button below to get a copy of my private portfolio PDF. Thanks for checking me out!</a>
 				<div class="card-button-row">
-					<a href="https://www.linkedin.com/in/tyler-richardson-775228a0/" class="card-brandmark" target="_blank">
+					<a href="https://www.linkedin.com/in/tyler-richardson-775228a0/" class="card-brandmark" rel="noopener">
 						<img data-srcset="/images/logo-linkedin@1x.png,
 								   	   /images/logo-linkedin@2x.png 2x,
 								        /images/logo-linkedin@3x.png 3x"
 							data-src="/images/logo-linkedin@3x.png"
 							src="/images/logo-linkedin@3x.png" alt="LinkedIn" class="brand-logo lazyload">
 					</a>
-					<a href="https://dribbble.com/198e4" class="card-brandmark" target="_blank">
+					<a href="https://dribbble.com/198e4" class="card-brandmark" rel="noopener">
 						<img data-srcset="/images/logo-dribbble@1x.png,
 								        /images/logo-dribbble@2x.png 2x,
 								        /images/logo-dribbble@3x.png 3x"
 							data-src="/images/logo-dribbble@3x.png"
 							src="/images/logo-dribbble@3x.png" alt="Dribbble" class="brand-logo lazyload">
 					</a>
-					<a href="https://github.com/198e4" class="card-brandmark" target="_blank">
+					<a href="https://github.com/198e4" class="card-brandmark" rel="noopener">
 						<img data-srcset="/images/logo-github@1x.png,
 								        /images/logo-github@2x.png 2x,
 								        /images/logo-github@3x.png 3x"
 							data-src="/images/logo-github@3x.png"
 							src="/images/logo-github@3x.png" alt="GitHub" class="brand-logo lazyload">
 					</a>
-					<a href="https://codepen.io/198e4" class="card-brandmark" target="_blank">
+					<a href="https://codepen.io/198e4" class="card-brandmark" rel="noopener">
 						<img data-srcset="/images/logo-codepen@1x.png,
 								        /images/logo-codepen@2x.png 2x,
 								        /images/logo-codepen@3x.png 3x"
