--- a/functions/views/index.hbs
+++ b/functions/views/index.hbs
@@ -9,11 +9,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!-- CSS -->
 		<!-- Google Fonts -->
-		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,900|Playfair+Display|Playfair+Display+SC:900&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,900|Playfair+Display|Playfair+Display+SC:900&display=swap" rel="preload" as="font">
 		<!-- Material Icons -->
-		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-		<!-- App Layout -->
-		<link rel='stylesheet' href='/stylesheets/css/layout.css' />
+		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="preload" as="font" />
+		<!-- UI -->
+		<link rel="stylesheet" href="/stylesheets/css/ui.css" rel="preload" as="style" />
 	</head>
 	<body>
 		<!-- Navigation -->
