Fixed error in preload

--- a/functions/views/index.hbs
+++ b/functions/views/index.hbs
@@ -11,7 +11,7 @@
 		<!-- Google Fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,900|Playfair+Display|Playfair+Display+SC:900&display=swap" rel="preload" as="font">
 		<!-- Material Icons -->
-		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="preload" as="font" />
+		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 		<!-- UI -->
 		<link rel="stylesheet" href="/stylesheets/css/ui.css" rel="preload" as="style" />
 	</head>
