Added fallback system fonts

--- a/functions/views/index.hbs
+++ b/functions/views/index.hbs
@@ -10,21 +10,20 @@
 		<!-- CSS -->
 		<!-- Google Fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,900|Playfair+Display|Playfair+Display+SC:900&display=swap" rel="preload" as="font">
-		<!-- Material Icons -->
-		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 		<!-- UI -->
 		<link rel="stylesheet" href="/stylesheets/css/ui.css" rel="preload" as="style" />
+		<!-- Material Icons -->
+		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 	</head>
 	<body>
 		<!-- Navigation -->
+		<!--
 		<div class="nav">
-			<!-- Nav Toggle -->
-			<!-- <div class="nav-tab"></div> -->
-			<!-- Nav Links -->
-			<!-- <div class="nav-content">
-
-			</div> -->
+			<div class="nav-tab"></div>
+			<div class="nav-content">
+			</div>
 		</div>
+		-->
 		<!-- Hero -->
 		<div class="hero">
 			<!-- Hero Copy -->
