Installed Grunt Task Runner and Uglify

--- a/functions/views/index.hbs
+++ b/functions/views/index.hbs
@@ -214,6 +214,6 @@
 		<!-- Lazysizes -->
 		<script src="javascripts/plugins/lazysizes.min.js" async></script>
 		<!-- UI -->
-		<script src="/javascripts/ui.js"></script>
+		<script src="/javascripts/ui.min.js"></script>
 	</body>
 </html>
