Fixed error in default fonts

--- a/public/stylesheets/scss/ui.scss
+++ b/public/stylesheets/scss/ui.scss
@@ -28,10 +28,10 @@
 	// Type Styles
 
 		// Titles
-		$font-primary: 'Playfair Display SC', 'Georgia' serif; // 900 in use
-		$font-secondary: 'Montserrat', 'Verdana' sans-serif; // 400, 900 in use
+		$font-primary: 'Playfair Display SC', 'Georgia', serif; // 900 in use
+		$font-secondary: 'Montserrat', 'Verdana', sans-serif; // 400, 900 in use
 		// Copy
-		$font-standard: 'Playfair Display', 'Georgia' serif; // 400 in use
+		$font-standard: 'Playfair Display', 'Georgia', serif; // 400 in use
 
 	// Colors
 
