Redirect HTTP connections to HTTPS

--- a/functions/views/dev/index.hbs
+++ b/functions/views/dev/index.hbs
@@ -3,7 +3,7 @@
 	<head>
 		<!-- Meta -->
 		<title>Portfolio &middot; Tyler Richardson</title>
-		<meta name="description" content="A collection of the creative work of Tyler Richardson" />
+		<meta name="description" content="The creative work of Product Designer Tyler Richardson" />
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
