Progress on manifest.json

--- a/functions/views/dev/index.hbs
+++ b/functions/views/dev/index.hbs
@@ -7,9 +7,11 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<!-- <link rel="manifest" href="../../manifest.json"> -->
+		<link rel="apple-touch-icon" href="/public/apple-touch-icon.png">
 		<!-- CSS -->
 		<!-- Google Fonts -->
-		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,900|Playfair+Display|Playfair+Display+SC:900&display=swap" rel="preload" as="font">
+		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,900|Playfair+Display|Playfair+Display+SC:900&display=swap">
 		<!-- UI -->
 		<link rel="stylesheet" href="/stylesheets/css/ui.min.css" rel="preload" as="style" />
 		<!-- Material Icons -->
@@ -121,6 +123,7 @@
 					<div class="tag">NPM</div>
 					<div class="tag">Express.js</div>
 					<div class="tag">Handlebars</div>
+					<div class="tag">Grunt</div>
 					<div class="tag">SVG</div>
 					<div class="tag">Git</div>
 					<div class="tag">GitHub</div>
