Switched back to @import

--- a/public/stylesheets/scss/ui.scss
+++ b/public/stylesheets/scss/ui.scss
@@ -27,6 +27,8 @@
 
 	// Type Styles
 
+		@import url('https://fonts.googleapis.com/css?family=Montserrat:400,900|Playfair+Display|Playfair+Display+SC:900&display=swap');
+
 		// Titles
 		$font-primary: 'Playfair Display SC', serif; // 900 in use
 		$font-secondary: 'Montserrat', sans-serif; // 400, 900 in use
