--- a/functions/views/dev/index.hbs
+++ b/functions/views/dev/index.hbs
@@ -2,20 +2,18 @@
 <html class="no-js" lang="en">
 	<head>
 		<!-- Meta -->
-		<title>Portfolio &middot; Tyler Richardson</title>
-		<meta name="description" content="The creative work of Product Designer Tyler Richardson" />
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<!-- <link rel="manifest" href="../../manifest.json"> -->
-		<link rel="apple-touch-icon" href="/public/apple-touch-icon.png">
+			<title>Portfolio &middot; Tyler Richardson</title>
+			<meta name="description" content="The creative work of Product Designer Tyler Richardson" />
+			<meta charset="utf-8">
+			<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+			<meta name="viewport" content="width=device-width, initial-scale=1.0">
+			<link rel="manifest" href="manifest.json">
+			<link rel="apple-touch-icon" href="images/icon-192.png">
 		<!-- CSS -->
-		<!-- Google Fonts -->
-		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,900|Playfair+Display|Playfair+Display+SC:900&display=swap">
-		<!-- UI -->
-		<link rel="stylesheet" href="/stylesheets/css/ui.min.css" rel="preload" as="style" />
-		<!-- Material Icons -->
-		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+			<!-- UI -->
+			<link rel="stylesheet" href="/stylesheets/css/ui.min.css" rel="preload" as="style" />
+			<!-- Material Icons -->
+			<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 	</head>
 	<body>
 		<!-- Navigation -->
