Case Study Overview View

--- a/functions/views/dev/index.hbs
+++ b/functions/views/dev/index.hbs
@@ -17,13 +17,22 @@
 	</head>
 	<body>
 		<!-- Navigation -->
-		<!--
 		<div class="nav">
-			<div class="nav-tab"></div>
+			<div class="nav-tab">
+				<i class="material-icons nav-close-icon">close</i>
+			</div>
 			<div class="nav-content">
+				<div class="nav-content">
+					<img data-srcset="/images/nav-badge@1x.png,
+							   /images/nav-badge@2x.png 2x,
+							   /images/nav-badge@3x.png 3x"
+						data-src="/images/nav-badge@3x.png"
+						src="/images/nav-badge@3x.png" alt="Product Designer, Tyler Richardson" class="nav-art lazyload">
+						<a href="/" class="nav-link nav-current-view">About Me</a>
+						<a href="/case-studies/" class="nav-link">Case Studies</a>
+				</div>
 			</div>
 		</div>
-		-->
 		<!-- Hero -->
 		<div class="hero">
 			<!-- Hero Copy -->
@@ -60,7 +69,7 @@
 						   /images/about@3x.png 3x"
 					data-src="/images/about@3x.png"
 					src="/images/about@3x.png" alt="A Bit About Me" class="card-art lazyload">
-				<h3 class="card-title">A Bit About Me</h2>
+				<h3 class="card-title">A Bit About Me</h3>
 				<p class="card-copy">Hey there, my name is <a href="https://www.linkedin.com/in/tyler-richardson-775228a0/" rel="noopener">Tyler</a> and thank you for your interest in my work. I am a Product Designer living in the San Francisco Bay Area that’s worked at a startup named <a href="https://quotedcar.com" rel="noopener">QuotedCar</a> for the past four years.</p>
 				<p class="card-copy">I thrive in a world where I can put my creative problem solving skills to work everyday. I lean hard on my experience in UX Design, UI Design, and Front-End Development to create solutions to complex interaction
 					design problems, and to create experiences that are simple and delightful for users.</p>
@@ -78,7 +87,7 @@
 						   /images/skills@3x.png 3x"
 					data-src="/images/skills@3x.png"
 					src="/images/skills@3x.png" alt="Skills & Tools" class="card-art lazyload">
-				<h3 class="card-title">Skills &amp; Tools</h2>
+				<h3 class="card-title">Skills &amp; Tools</h3>
 				<p class="card-copy">These tags represent the methods, software and web technologies that I use regularly in my design work.</p>
 				<h4 class="card-subtitle">UX Design &amp; Interaction Design</h4>
 				<div class="tags">
@@ -150,7 +159,7 @@
 						   /images/portfolio@3x.png 3x"
 					data-src="/images/portfolio@3x.png"
 					src="/images/portfolio@3x.png" alt="My Portfolio" class="card-art lazyload">
-				<h3 class="card-title">My Portfolio</h2>
+				<h3 class="card-title">My Portfolio</h3>
 				<p class="card-copy">Through these links you can learn more about me, and my creative work. Please email me through the request button below to get a copy of my private portfolio PDF. Thanks for checking me out!</a>
 				<div class="card-button-row">
 					<a href="https://www.linkedin.com/in/tyler-richardson-775228a0/" class="card-brandmark" rel="noopener">
@@ -174,7 +183,7 @@
 							data-src="/images/logo-github@3x.png"
 							src="/images/logo-github@3x.png" alt="GitHub" class="brand-logo lazyload">
 					</a>
-					<a href="mailto:tyler.colby.richardson@gmail.com?subject=Portfolio Request" class="card-button heartbeat">Request My Portfolio</a>
+					<a href="/case-studies/" class="card-button heartbeat">Case Studies</a>
 				</div>
 				<div class="card-stripe blue"></div>
 			</div>
