--- a/public/stylesheets/scss/ui.scss
+++ b/public/stylesheets/scss/ui.scss
@@ -1,6 +1,6 @@
-///////////////////////////////////////////
+/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 // SASS
-///////////////////////////////////////////
+/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 	// Mixins to Be Reaused by Grid Declarations for Desktop, Tablet and Mobile
 
@@ -27,7 +27,7 @@
 
 	// Type Styles
 
-		@import url('https://fonts.googleapis.com/css?family=Montserrat:400,900|Playfair+Display|Playfair+Display+SC:900&display=swap');
+		@import url('https://fonts.googleapis.com/css?family=Montserrat:400,900|Playfair+Display|Playfair+Display+SC:400,900&display=swap');
 
 		// Titles
 		$font-primary: 'Playfair Display SC', serif; // 900 in use
@@ -69,9 +69,9 @@
 
 			$bdr: #E3E3E3;
 
-///////////////////////////////////////////
+/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 // Animations
-///////////////////////////////////////////
+/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 	.heartbeat {
 		-webkit-animation: heartbeat 1.5s ease-in-out infinite both;
@@ -147,9 +147,9 @@
 		  }
 		}
 
-///////////////////////////////////////////
+/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 // Everything
-///////////////////////////////////////////
+/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 	* {
 		box-sizing: border-box;
@@ -170,9 +170,9 @@
 				z-index: 1;
 			}
 
-///////////////////////////////////////////
+/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 // Layout
-///////////////////////////////////////////
+/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 		.panels {
 			display: grid;
@@ -270,9 +270,9 @@
 
 			}
 
-///////////////////////////////////////////
+/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 // Type
-///////////////////////////////////////////
+/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 	a, h1, h2, h3, h4, h5, h6, p, ul, ol, li {
 		margin: 0;
@@ -398,18 +398,18 @@
 			}
 		}
 
-///////////////////////////////////////////
+/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 // Forms
-///////////////////////////////////////////
+/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 	// Prevent Chrome From Applying Its Default Yellow Background On Autofilled Form Inputs
 	input:-webkit-autofill {
 		-webkit-box-shadow: 0 0 0 50px #ffffff inset;
 	}
 
-///////////////////////////////////////////
+/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 // Navigation
-///////////////////////////////////////////
+/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 	.nav {
 		width: 100%;
@@ -418,7 +418,7 @@
 			top: 0;
 			right: 0;
 			left: 0;
-		z-index: 4;
+		z-index: 5;
 		@media (max-width: 1300px) {
 
 		}
@@ -433,7 +433,8 @@
 		border-radius: 4px;
 		background: #EA3F85;
 		border: 2px solid #ce1762;
-		box-shadow: 0px 0px 10px 0px $black-50;
+		z-index: 6;
+		// box-shadow: 0px 0px 10px 0px $black-50;
 		cursor: pointer;
 		position: absolute;
 			top: 50px;
@@ -449,7 +450,8 @@
 	}
 
 	.nav-tab:hover {
-		background: $white-100;
+		// background: $white-100;
+		box-shadow: 0 0 10px 0 $black-50;
 		transition: 250ms;
 		@media (max-width: 1300px) {
 
@@ -459,7 +461,14 @@
 		}
 	}
 
-	.nav-content {
+	.nav-tab.nav-close {
+		// background: $white-100;
+		height: 65px;
+		border-radius: 50%;
+		transition: 250ms;
+		display: flex;
+			align-items: center;
+			justify-content: center;
 		@media (max-width: 1300px) {
 
 		}
@@ -468,9 +477,78 @@
 		}
 	}
 
-///////////////////////////////////////////
+		.nav-tab > .nav-close-icon {
+			display: none;
+			opacity: 0;
+		}
+
+		.nav-tab.nav-close > .nav-close-icon {
+			display: block;
+			font-size: 36px;
+			color: #202124;
+			opacity: 1;
+		}
+
+	.nav-content {
+		display: none;
+		z-index: 5;
+		width: 100vw;
+		height: 0;
+		background: rgba(32, 33, 36, 0.9);
+		position: absolute;
+			top: 0;
+			right: 0;
+			bottom: 0;
+			left: 0;
+		@media (max-width: 1300px) {
+
+		}
+		@media (max-width: 700px) {
+
+		}
+	}
+
+		.nav-content.nav-show {
+			display: block;
+			width: 100vw;
+			height: 100vh;
+			display: flex;
+				flex-direction: column;
+				align-items: center;
+				justify-content: center;
+			@media (max-width: 1300px) {
+
+			}
+			@media (max-width: 700px) {
+
+			}
+		}
+
+			.nav-content .nav-art {
+				max-width: 150px;
+				margin: 0 auto 15px auto;
+				display: block;
+			}
+
+			.nav-content .nav-link {
+				color: #EA3F85;
+				font-family: $font-secondary;
+				font-size: 35px;
+				font-weight: 900;
+				text-align: center;
+				text-transform: uppercase;
+				border: none;
+				padding: 15px 25px 0 25px;
+			}
+
+			.nav-content .nav-link.nav-current-view {
+				// color: $white-100;
+				border-bottom: 5px solid #00D89150;
+			}
+
+/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 // Homepage Specific
-///////////////////////////////////////////
+/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 .hero {
 	width: calc(100vw - 50px);
@@ -888,7 +966,9 @@
 				}
 			}
 
-////////////////////////////
+/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+// Homepage Content Container
+/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 .homepage-content {
 	position: relative;
@@ -901,9 +981,9 @@
 	}
 }
 
-///////////////////////////////////////////
+/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 // Cards
-///////////////////////////////////////////
+/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 	.cards.homepage-content {
 		@media (max-width: 1300px) {
@@ -1068,6 +1148,23 @@
 				}
 			}
 
+			.card ul.card-list {
+				color: $black-100;
+				font-size: 18px;
+				letter-spacing: 0.2px;
+				line-height: 30px;
+				font-weight: 400;
+				text-align: left;
+				margin: 15px 0 25px 0;
+				padding-left: 35px;
+				@media (max-width: 1300px) {
+
+				}
+				@media (max-width: 700px) {
+
+				}
+			}
+
 			.card .card-button-row {
 				display: flex;
 					align-items: center;
@@ -1116,9 +1213,9 @@
 					}
 				}
 
-///////////////////////////////////////////
+/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 // Tags
-///////////////////////////////////////////
+/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 		.tags {
 			width: 100%;
@@ -1128,7 +1225,7 @@
 				flex-wrap: wrap;
 				align-items: center;
 				justify-content: flex-start;
-			margin: 5px 0 25px 0;
+			margin: 25px 0 25px 0;
 			@media (max-width: 1300px) {
 
 			}
@@ -1240,9 +1337,9 @@
 				border: 1px solid #FF464C;
 			}
 
-///////////////////////////////////////////
+/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 // Footer
-///////////////////////////////////////////
+/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 		.footer {
 			width: 100%;
