Case Study Pages

--- a/functions/views/dev/index.hbs
+++ b/functions/views/dev/index.hbs
@@ -37,7 +37,7 @@
 		<div class="hero">
 			<!-- Hero Copy -->
 			<div class="hero-copy">
-				<h1 class="hero-title">Tyler Richardson</h1>
+				<h1 class="hero-title my-name">Tyler Richardson</h1>
 				<h2 class="hero-subtitle">Product Designer</h2>
 			</div>
 			<!-- Hero Filter -->
